# mcp-workflow-analyse-cv

./: .env.example  .gitignore  README.md  http_server.py  mcp_server.py  paradigm_client.py  pyproject.toml  requirements.txt  server.py  workflow.py
